@@ -34,6 +34,7 @@ Bugfixes:
  - Debugger: Align PC-relative loads in Thumb
  - Debugger: Fix watchpoints triggering too late
  - GBA Video: Fix sprite mis-ordering behavior in some cases (fixes #168)
+ - GBA Video: Fix window interactions with 16-color mode 0 mosaic
 Misc:
  - Qt: Disable sync to video by default
  - GBA: Exit cleanly on FATAL if the port supports it
